refactor: 폴더 구조 리팩토링(style 폴더 삭제)

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="/src/styles/index.css">
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="./index.css">
         <title>뉴스스탠드</title>
     </head>
     <body>
         <div id="index"></div>
-        <script type="module" src="/src/index.js" defer></script>
+        <script type="module" src="./index.js" defer></script>
     </body>
 </html>
