--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
         <title>뉴스스탠드</title>
     </head>
     <body>
-        <div id="index"></div>
+        <div id="index">
+            <nav id="categoryBar"></nav>
+        </div>
         <script type="module" src="./index.js" defer></script>
     </body>
 </html>
