--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="index">
+            <header id="header"></header>
             <nav id="categoryBar"></nav>
         </div>
         <script type="module" src="./index.js" defer></script>
