feat: 롤링바 일부 구현(데이터 가져오기 & 애니메이션 구현 전)

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <body>
         <div id="index">
             <header id="header"></header>
+            <div id="rollingBar"></div>
             <nav id="categoryBar"></nav>
         </div>
         <script type="module" src="./index.js" defer></script>
