--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
         <div id="index">
             <header id="header"></header>
             <div id="rollingBar"></div>
-            <nav id="categoryBar"></nav>
+            <div id="mediaTab"></div>
+            <div id="tabContent"></div>
         </div>
         <script type="module" src="./index.js" defer></script>
     </body>
